--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=ecommerce
+project.image=images/
 # Enable H2 console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
